arangement de dossier

--- a/calendar.html
+++ b/calendar.html
@@ -25,38 +25,38 @@
         <div class="sidebar-menu">
             <ul>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-1.png" alt="logo dashboard bleu">
+                    <img class="images_noire" src="assets/images/icons/dashboard.noir.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/dashboard.blanc.png" alt="icon blanc">
                     <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
                 </li>
                 <li class="liste" >
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(8).png" alt="logo projet noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons-blanc-2.png" alt="loggo projet bleu">
+                    <img class="images_noire" src="assets/images/icons/projet-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/projet-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Project</a>
                 </li>
                 <li class="liste calendar_active">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
-                    <img  src="assets/images/icon_blanc/icons8-blanc-3.png" alt="logo calendrier bleu">
+                    <img class="images_noire" src="assets/images/icons/calendar-noire.png" alt="icon noire">
+                    <img src="assets/images/icons/calendar-blanc.png" alt="icon blanc">
                     <a href="calendar.html" class="w3-bar-item ">Calendar</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="logo homme bleu">
+                    <img class="images_noire" src="assets/images/icons/homme-noir.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/homme-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Teams</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim.png" alt="analytique noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-5.png" alt="analytique bleu">
+                    <img class="images_noire" src="assets/images/icons/analytic-noire.png" alt="analytique noire">
+                    <img class="images_blanc" src="assets/images/icons/analytic-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Analytics</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/source-code--v4.png" alt="integration noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-6.png" alt="integration bleu">
+                    <img class="images_noire" src="assets/images/icons/code-noire1.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/code-blanc.png" alt="icon blanc">
                     <a href="setting.html" class="w3-bar-item ">Integrations</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(5).png" alt="logo message noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-7.png" alt=" logo message bleu">
+                    <img class="images_noire" src="assets/images/icons/message-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/message-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Messages</a>
                 </li>
             </ul>
@@ -83,8 +83,8 @@
                         <h2>Dec, 2022</h2>
                         <div class="icon-button">
                             <div class="icon">
-                                <img src="assets/images/calendar/Caret%20left%20extra%204.png" alt="">
-                                <img src="assets/images/calendar/Caret%20right%20extra%204.png" alt="">
+                                <img src="assets/images/icons/Caret%20left%20extra%204.png" alt="caret left">
+                                <img src="assets/images/icons/Caret%20right%20extra%204.png" alt="caret right">
                             </div>
                             <button>Today</button>
                         </div>
@@ -108,7 +108,7 @@
                             </select>
                         </form>
                         <div class="image">
-                            <img  src="assets/images/calendar/Button 2965 (1).png" alt="">
+                            <img  src="assets/images/icons/Button 2965 (1).png" alt="button">
                         </div>
                     </div>
                 </div>
@@ -207,8 +207,8 @@
             <div class="dec-2022">
                 <h2>Dec, 2022</h2>
                 <div class="icon">
-                    <img src="assets/images/calendar/Caret%20left%20extra%204.png" alt="">
-                    <img src="assets/images/calendar/Caret%20right%20extra%204.png" alt="">
+                    <img src="assets/images/icons/Caret%20left%20extra%204.png" alt="caret left">
+                    <img src="assets/images/icons/Caret%20right%20extra%204.png" alt="caret right">
                 </div>
             </div>
             <div class="calendar">
@@ -289,24 +289,24 @@
                                 <h3>Event title</h3>
                                 <div class="text">
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Clock%20106.png" alt="">
+                                        <img src="assets/images/icons/Clock%20106.png" alt="clock">
                                         <p>08:00 - 09:00 AM</p>
                                     </div>
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Map%20pin%2049.png" alt="">
+                                        <img src="assets/images/icons/Map%20pin%2049.png" alt="map">
                                         <p>Meeting room 09:002</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="picture-avatar">
                                 <div class="img">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%202.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%201677-3.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%204.png" alt="">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%202.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%201677-3.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%204.png" alt="avatar">
                                 </div>
                                 <div class="points">
-                                    <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                                    <img src="assets/images/icons/points.png" alt="points">
                                 </div>
                             </div>
                         </div>
@@ -314,7 +314,7 @@
                     <div class="time">
                         <div class="time-blue">08:30 AM </div>
                         <div class="img_oval">
-                            <img src="assets/images/calendar/Oval%20910%20(1).png" alt="">
+                            <img src="assets/images/icons/Oval%20910%20(1).png" alt="oval points">
                             <div class="line-blue"></div>
                         </div>
                     </div>
@@ -331,24 +331,24 @@
                                 <h3>Meeting title</h3>
                                 <div class="text">
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Clock%20106.png" alt="">
+                                        <img src="assets/images/icons/Clock%20106.png" alt="clock">
                                         <p>08:00 - 09:00 AM</p>
                                     </div>
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Map%20pin%2049.png" alt="">
+                                        <img src="assets/images/icons/Map%20pin%2049.png" alt="map">
                                         <p>Meeting room 09:002</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="picture-avatar">
                                 <div class="img">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%202.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%205.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%206.png" alt="">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%202.png" alt=avatar"">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%205.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%206.png" alt="avatar">
                                 </div>
                                 <div class="points">
-                                    <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                                    <img src="assets/images/icons/points.png" alt="points">
                                 </div>
                             </div>
                         </div>
@@ -366,24 +366,24 @@
                                 <h3>Meeting title</h3>
                                 <div class="text">
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Clock%20106.png" alt="">
+                                        <img src="assets/images/icons/Clock%20106.png" alt="clock">
                                         <p>08:00 - 09:00 AM</p>
                                     </div>
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Map%20pin%2049.png" alt="">
+                                        <img src="assets/images/icons/Map%20pin%2049.png" alt="map">
                                         <p>Meeting room 09:002</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="picture-avatar">
                                 <div class="img">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar8.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%2000001.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%200002.png" alt="">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar8.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%2000001.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%200002.png" alt="avatar">
                                 </div>
                                 <div class="points">
-                                    <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                                    <img src="assets/images/icons/points.png" alt="points">
                                 </div>
                             </div>
                         </div>
@@ -401,30 +401,30 @@
                                 <h3>Meeting title</h3>
                                 <div class="text">
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Clock%20106.png" alt="">
+                                        <img src="assets/images/icons/Clock%20106.png" alt="clock">
                                         <p>08:00 - 09:00 AM</p>
                                     </div>
                                     <div class="text-time">
-                                        <img src="assets/images/calendar/Map%20pin%2049.png" alt="">
+                                        <img src="assets/images/icons/Map%20pin%2049.png" alt="map">
                                         <p>Meeting room 09:002</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="picture-avatar">
                                 <div class="img">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%202.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%200003.png" alt="">
-                                    <img class="avatar" src="assets/images/calendar/Avatar%200006.png" alt="">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%202526.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%202.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%200003.png" alt="avatar">
+                                    <img class="avatar" src="assets/images/calendar/Avatar%200006.png" alt="avatar">
                                 </div>
                                 <div class="points">
-                                    <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                                    <img src="assets/images/icons/points.png" alt="points">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="time">
-                        <div class="hour">12:00 AM </div>
+                        <div class="hour">12:00 AM</div>
                         <div class="line-black"></div>
                     </div>
                 </div>
@@ -435,7 +435,7 @@
                 <div class="nav">
                     <h2>Activities</h2>
                     <div class="points">
-                        <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                        <img src="assets/images/icons/points.png" alt="points">
                     </div>
                 </div>
                 <div class="activities-row">
@@ -532,30 +532,30 @@
     <div class="tabbar_menu">
         <ul>
             <li class="foot_page">
-                <img  class="images_noire"  src="assets/images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-four-squares-48.png" alt="logo dashboard bleu">
+                <img  class="images_noire" src="assets/images/icons/dashboard.noir.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/dashboard-bleu.png" alt="icon bleu">
                 <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
             </li>
             <li class="foot_page calendar_active">
-                <img  class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-calendar-31-50.png" alt="logo calendrier bleu">
+                <img  class="images_noire" src="assets/images/icons/calendar-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/calendar-bleu.png" alt="icon bleu">
                 <a href="calendar.html" class="w3-bar-item ">Calendar</a>
 
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
-                <img class="image_bleu" src="assets/images/image_responsive/user-account-50.png" alt="logo homme bleu">
+                <img class="images_noire" src="assets/images/icons/homme-noir.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/homme-bleu.png" alt="icon noire">
                 <a href="#" class="w3-bar-item ">Teams</a>
             </li>
 
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/image_responsive/message_12.png" alt="logo message noire">
-                <img class="image_bleu" src="assets/images/image_responsive/message11-32%20(1).png" alt="logo message bleu">
+                <img class="images_noire" src="assets/images/icons/message-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/message-bleu.png" alt="icon bleu">
                 <a href="#" class="w3-bar-item ">Messages</a>
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/image_responsive/icons8-setting-64.png" alt="logo parametre noire">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-setting-64%20(2).png" alt="logo paramatre bleu">
+                <img class="images_noire" src="assets/images/icons/setting-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/setting-bleu.png" alt="icon bleu">
                 <a href="setting.html" class="w3-bar-item ">Setting</a>
             </li>
         </ul>
