--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
 <div class="w3-sidebar w3-bar-block w3-sidebar">
     <div class="sidebar-head">
         <a href="index.html">
-            <img src="assets/images/picture/prim-logo.png" alt="">
+            <img src="assets/images/picture/prim-logo.png" alt="logo">
         </a>
         <div class="text">
             <a href="index.html">Project Name </a>
@@ -25,38 +25,38 @@
         <div class="sidebar-menu">
             <ul>
                 <li class="liste dashboard_active" style="background-color: #00bdd6">
-                    <img  class="images_noire"  src="assets/images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
-                    <img src="assets/images/picture/four-squares-50.png" alt="logo dashboaed bleu">
+                    <img class="images_noire" src="assets/images/icons/dashboard.noir.png" alt="icon noire">
+                    <img src="assets/images/icons/dashboard.blanc.png" alt="icon blanc">
                     <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
                 </li>
                 <li class="liste">
-                    <img  class="images_noire"  src="assets/images/picture/imgpsh_fullsize_anim%20(8).png" alt="logo projet noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons-blanc-2.png" alt="logo projet bleu">
+                    <img  class="images_noire"  src="assets/images/icons/projet-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/projet-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Project</a>
                 </li>
                 <li class="liste">
-                    <img  class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-3.png" alt="logo calendrier bleu">
+                    <img  class="images_noire" src="assets/images/icons/calendar-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/calendar-blanc.png" alt="icon blanc">
                     <a href="calendar.html" class="w3-bar-item ">Calendar</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="logo homme bleu">
+                    <img class="images_noire" src="assets/images/icons/homme-noir.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/homme-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Teams</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim.png" alt="analytique noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-5.png" alt="analitique bleu">
+                    <img class="images_noire" src="assets/images/icons/analytic-noire.png" alt="analytique noire">
+                    <img class="images_blanc" src="assets/images/icons/analytic-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Analytics</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/source-code--v4.png" alt="integration noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-6.png" alt="integration bleu">
+                    <img class="images_noire" src="assets/images/icons/code-noire1.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/code-blanc.png" alt="icon blanc">
                     <a href="setting.html" class="w3-bar-item ">Integrations</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(5).png" alt="logo message noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-7.png" alt="logo message bleu">
+                    <img class="images_noire" src="assets/images/icons/message-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/message-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Messages</a>
                 </li>
             </ul>
@@ -76,8 +76,8 @@
             <h1>Dashboard</h1>
             <div class="btn-toggle">
                 <div class="button click" style="margin-right: 0">
-                    <button class="btn-nav button-1"><img src="assets/images/picture/plus-math-24.png" alt="">Create new project</button>
-                    <button class="btn-nav button-2"><img style="width: 15px" src="assets/images/picture/share-24.png" alt="">Share</button>
+                    <button class="btn-nav button-1"><img src="assets/images/icons/plus-math-24.png" alt="icon plus">Create new project</button>
+                    <button class="btn-nav button-2"><img style="width: 15px" src="assets/images/icons/share-24.png" alt="icon share">Share</button>
                 </div>
                 <div class="toggle">
                     <i class="fa-solid fa-bars ouvrir"></i>
@@ -93,7 +93,7 @@
                     <div class="small-title">Data label</div>
                     <h1>6,452</h1>
                     <div class="percentage percentage-1">
-                        <img src="assets/images/picture/Caret%20up%20extra%201.png" alt="">
+                        <img src="assets/images/icons/caret-vert.png" alt="caret vert">
                         5.39%
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <div class="small-title">Data label</div>
                     <h1>6,452</h1>
                     <div class="percentage percentage-2">
-                        <img src="assets/images/picture/Caret%20up%20extra%203.png" alt="">
+                        <img src="assets/images/icons/caret-rouge.png" alt="caret rouge">
                         0.65%
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="small-title">Data label</div>
                     <h1>6,452</h1>
                     <div class="percentage percentage-1">
-                        <img src="assets/images/picture/Caret%20up%20extra%201.png" alt="">
+                        <img src="assets/images/icons/caret-vert.png" alt="caret vert">
                         2.29%
                     </div>
                 </div>
@@ -131,8 +131,8 @@
                     </div>
                 </div>
                 <div class="statistic-img">
-                    <img class="img-block" src="assets/images/picture/Column%20bar%20chart%2011.png" alt="">
-                    <img class="img-none" src="assets/images/image_responsive/Column%20bar%20chart%2012.png" alt="">
+                    <img class="img-block" src="assets/images/picture/Column%20bar%20chart%2011.png" alt="statistiques">
+                    <img class="img-none" src="assets/images/image_responsive/Column%20bar%20chart%2012.png" alt="statistiques">
                 </div>
                 <div class="statistic-numbers">
                     <div>1</div>
@@ -155,7 +155,7 @@
                 <div class="activities-nav">
                     <h2>Activities</h2>
                     <div class="dropdown">
-                        <img src="assets/images/picture/left-icon.svg" alt="">
+                        <img src="assets/images/icons/left-icon.svg" alt="">
                         <form action="">
                             <label for="date"></label>
                             <select name="date" id="date">
@@ -257,7 +257,7 @@
                         <button id="A" type="button">New</button>
                     </td>
                     <td class="center">
-                        <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                        <img src="assets/images/icons/points.png" alt="points">
                     </td>
                 </tr>
                 <tr>
@@ -269,7 +269,7 @@
                         <button id="B" type="button">Delivered</button>
                     </td>
                     <td class="center">
-                        <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                        <img src="assets/images/icons/points.png" alt="points">
                     </td>
                 </tr>
                 <tr>
@@ -281,7 +281,7 @@
                         <button id="C" type="button">New</button>
                     </td>
                     <td class="center">
-                        <img src="assets/images/calendar/Dots%20three%20vertical%2073.png" alt="">
+                        <img src="assets/images/icons/points.png" alt="points">
                     </td>
                 </tr>
             </table>
@@ -327,7 +327,6 @@
                 </div>
             </div>
         </div>
-
         <div class="statistics dashboard-statistic">
             <div class="stats_bock">
                 <div class="text-stats">
@@ -342,29 +341,29 @@
     <div class="tabbar_menu">
         <ul>
             <li class="foot_page dashboard_active">
-                <img  class="images_noire"  src="assets/images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noir">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-four-squares-48.png" alt="logo dashboard bleu">
+                <img  class="images_noire" src="assets/images/icons/dashboard.noir.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/dashboard-bleu.png" alt="icon bleu">
                 <a href="dashboard.html">Dashboard</a>
             </li>
             <li class="foot_page">
-                <img  class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noir">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-calendar-31-50.png" alt="logo calendrier bleu">
+                <img  class="images_noire" src="assets/images/icons/calendar-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/calendar-bleu.png" alt="icon bleu">
                 <a href="calendar.html" >Calendar</a>
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo home noir">
-                <img class="image_bleu" src="assets/images/image_responsive/user-account-50.png" alt="logo home bleu">
+                <img class="images_noire" src="assets/images/icons/homme-noir.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/homme-bleu.png" alt="icon noire">
                 <a href="#" >Teams</a>
             </li>
 
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/image_responsive/mes24%20(3).png" alt="logo message noir">
-                <img class="image_bleu" src="assets/images/image_responsive/message-24.png" alt="logo message bleu">
+                <img class="images_noire" src="assets/images/icons/message-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/message-bleu.png" alt="icon bleu">
                 <a href="#" >Messages</a>
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/image_responsive/icons8-setting-64.png" alt="logo parametre noir">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-setting-64%20(2).png" alt="logo parametre bleu">
+                <img class="images_noire" src="assets/images/icons/setting-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/setting-bleu.png" alt="icon bleu">
                 <a href="setting.html" >Setting</a>
             </li>
         </ul>
