--- a/setting.html
+++ b/setting.html
@@ -26,45 +26,45 @@
         <div class="sidebar-menu">
             <ul>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-1.png" alt="logo dashboard bleu">
+                    <img class="images_noire" src="assets/images/icons/dashboard.noir.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/dashboard.blanc.png" alt="icon blanc">
                     <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
                 </li>
                 <li class="liste" >
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(8).png" alt="logo projet noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons-blanc-2.png" alt="logo projet bleu">
+                    <img class="images_noire" src="assets/images/icons/projet-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/projet-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Project</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-3.png" alt="logo calendrier bleu">
+                    <img class="images_noire" src="assets/images/icons/calendar-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/calendar-blanc.png" alt="icon blanc">
                     <a href="calendar.html" class="w3-bar-item ">Calendar</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="logo homme bleu">
+                    <img class="images_noire" src="assets/images/icons/homme-noir.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/homme-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Teams</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim.png" alt="logo analytique noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-5.png" alt="logo analytique bleu">
+                    <img class="images_noire" src="assets/images/icons/analytic-noire.png" alt="analytique noire">
+                    <img class="images_blanc" src="assets/images/icons/analytic-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Analytics</a>
                 </li>
                 <li class="liste integration_active">
-                    <img class="images_noire" src="assets/images/picture/source-code--v4.png" alt="integration noire">
-                    <img src="assets/images/icon_blanc/icons8-blanc-6.png" alt="integration bleu">
+                    <img class="images_noire" src="assets/images/icons/code-noire1.png" alt="icon noire">
+                    <img src="assets/images/icons/code-blanc.png" alt="icon blanc">
                     <a href="setting.html" class="w3-bar-item ">Integrations</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(5).png" alt="logo parametre noire">
-                    <img class="images_blanc" src="assets/images/icon_blanc/icons8-blanc-7.png" alt="logo parametre bleu">
+                    <img class="images_noire" src="assets/images/icons/message-noire.png" alt="icon noire">
+                    <img class="images_blanc" src="assets/images/icons/message-blanc.png" alt="icon blanc">
                     <a href="#" class="w3-bar-item ">Messages</a>
                 </li>
             </ul>
         </div>
         <!--    *******************-->
         <div class="sidebar-images">
-            <img src="assets/images/picture/Avatar%201674-button.png" alt="">
+            <img src="assets/images/picture/Avatar%201674-button.png" alt="avatar">
             <div class="text">
                 <h4>Sergey Goldberg</h4>
                 <p>Company@exemple.com</p>
@@ -274,29 +274,29 @@
     </section>
     <section class="tabbar_menu">
         <ul>
-            <li class="foot_page ">
-                <img  class="images_noire"  src="assets/images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-four-squares-48.png" alt="logo dashboard bleu">
+            <li class="foot_page">
+                <img  class="images_noire" src="assets/images/icons/dashboard.noir.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/dashboard-bleu.png" alt="icon bleu">
                 <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
             </li>
             <li class="foot_page">
-                <img  class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-calendar-31-50.png" alt="logo calendrier bleu">
+                <img  class="images_noire" src="assets/images/icons/calendar-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/calendar-bleu.png" alt="icon bleu">
                 <a href="calendar.html" class="w3-bar-item ">Calendar</a>
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
-                <img class="image_bleu" src="assets/images/image_responsive/user-account-50.png" alt="logo homme bleu">
+                <img class="images_noire" src="assets/images/icons/homme-noir.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/homme-bleu.png" alt="icon noire">
                 <a href="#" class="w3-bar-item ">Teams</a>
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="assets/images/image_responsive/message_12.png" alt="logo message noire">
-                <img class="image_bleu" src="assets/images/image_responsive/message11-32%20(1).png" alt="logog message bleu">
+                <img class="images_noire" src="assets/images/icons/message-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/message-bleu.png" alt="icon bleu">
                 <a href="#" class="w3-bar-item ">Messages</a>
             </li>
             <li class="foot_page setting_active">
-                <img class="images_noire" src="assets/images/image_responsive/icons8-setting-64.png" alt="logo parametre  noire">
-                <img class="image_bleu" src="assets/images/image_responsive/icons8-setting-64%20(2).png" alt="logo parametre bleu">
+                <img class="images_noire" src="assets/images/icons/setting-noire.png" alt="icon noire">
+                <img class="image_bleu" src="assets/images/icons/setting-bleu.png" alt="icon bleu">
                 <a href="setting.html" class="w3-bar-item ">Setting</a>
             </li>
         </ul>
